@@ -1,3 +1,5 @@
+- set specific icons for summary steps (#32923)
+
 Version 10.4.181 - 29 August 2007, by Thierry Vignaud
 
 - fix translating steps titles
